# mkdocs-nype

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/scripts/: compare_pyproject.py  install_dev_deps.py
.github/workflows/: ci.yml  reusable_deploy.yml  test_dev.yml
docs/: index.md  license.md
docs/development/: index.md
docs/reference/: index.md
docs_overrides/assets/stylesheets/: extra.css
docs_overrides/hooks/: gen_docs_files.py  load_external_docs.py  modify_mkdocstrings.py  scope_currentcolor_css.py
docs_overrides/mkdocstrings_templates/python/nype/: module.html.jinja
docs_overrides/partials/: copyright.html
mkdocs_nype/: __init__.py  __main__.py
mkdocs_nype/extensions/: material.py
mkdocs_nype/macros_includes/: contact_form.md  discord_invite.md  hidden_email.md  setup_vars.md
mkdocs_nype/plugins/canonical_merge/: config.py  plugin.py
mkdocs_nype/plugins/canonical_merge/ci/: prepare_structure.py
mkdocs_nype/plugins/custom_auto_links/: config.py  plugin.py
mkdocs_nype/plugins/custom_blog_categorization/: config.py  plugin.py
mkdocs_nype/plugins/custom_cta_sections/: config.py  plugin.py
mkdocs_nype/plugins/custom_redirects/: config.py  plugin.py
mkdocs_nype/plugins/custom_social_logo/: config.py  plugin.py
mkdocs_nype/plugins/latest_blog_posts/: config.py  plugin.py
mkdocs_nype/plugins/nype_tweaks/: config.py  plugin.py  utils.py
mkdocs_nype/plugins/only_blog_nav/: config.py  plugin.py
mkdocs_nype/plugins/sap_icons/: config.py  plugin.py
mkdocs_nype/plugins/server_redirects/: config.py  plugin.py
mkdocs_nype/plugins/similar_blog_posts/: config.py  plugin.py
mkdocs_nype/plugins/unique_blog_date/: config.py  plugin.py
mkdocs_nype/plugins/webp_images/: config.py  plugin.py
mkdocs_nype/templates/: 404.html  __init__.py  blog-cards-grouped.html  blog-cards.html  blog-post.html  main.html  mkdocs_theme.yml  nype-base.html
mkdocs_nype/templates/assets/javascripts/: nype-core.js
mkdocs_nype/templates/assets/stylesheets/: neoteroi.css  nype-main.css
mkdocs_nype/templates/partials/: comments.html  copyright.html  post-card.html  post.html  posts-grouped.html
mkdocs_nype/templates/partials/integrations/analytics/: google.html
mkdocs_nype/utils/: __init__.py
