[build-system]
requires = [
    "hatchling",
    "hatch-requirements-txt"
]
build-backend = "hatchling.build"

[project]
name = "mkdocs-nype"
version = "0.24.0"
description = "MkDocs theme for Nype MkDocs projects, extends the Material for MkDocs theme"
authors = [
    { name = "Kamil Krzyśków", email = "kk@npe.cm" }
]
keywords = [
    "mkdocs",
    "nype",
    "theme"
]
dynamic = [
    "dependencies"
]
license-files = { paths = ["LICENSE"] }
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha"
]

[project.optional-dependencies]
dev = [
    "black~=25.1.0",
    "isort~=6.0"
]
docs = [
    "mkdocstrings[python] @ git+https://github.com/mkdocstrings/mkdocstrings.git@4ab180d01964c3ef8005cd72c8d91ba3fd241e27",
    "mkdocs-gen-files @ git+https://github.com/oprypin/mkdocs-gen-files.git@85d56eb8ed6eccf1528ca158dbf97c8f0b6bb72e",
    "mkdocs-literate-nav @ git+https://github.com/oprypin/mkdocs-literate-nav.git@12f9f79e8ce5d6ee2c934e7787d20d0f055e4c50"
]

[project.urls]
Source = "https://github.com/nypesap/mkdocs-nype"
Issues = "https://github.com/nypesap/mkdocs-nype/issues"

[project.entry-points."mkdocs.plugins"]
# Custom Nype entry points
"nype/sap_icons" = "mkdocs_nype.plugins.sap_icons.plugin:SapIconsPlugin"
"nype/latest_blog_posts" = "mkdocs_nype.plugins.latest_blog_posts.plugin:LatestBlogPostsPlugin"
"nype/custom_blog_categorization" = "mkdocs_nype.plugins.custom_blog_categorization.plugin:CustomBlogCategorizationPlugin"
"nype/custom_redirects" = "mkdocs_nype.plugins.custom_redirects.plugin:CustomRedirectsPlugin"
"nype/canonical_merge" = "mkdocs_nype.plugins.canonical_merge.plugin:CanonicalMergePlugin"
"nype/only_blog_nav" = "mkdocs_nype.plugins.only_blog_nav.plugin:OnlyBlogNavPlugin"
"nype/custom_social_logo" = "mkdocs_nype.plugins.custom_social_logo.plugin:CustomSocialLogoPlugin"
"nype/unique_blog_date" = "mkdocs_nype.plugins.unique_blog_date.plugin:UniqueBlogDatePlugin"
"nype/custom_cta_sections" = "mkdocs_nype.plugins.custom_cta_sections.plugin:CustomCallToActionSectionsPlugin"
"nype/custom_auto_links" = "mkdocs_nype.plugins.custom_auto_links.plugin:CustomAutoLinksPlugin"
"nype/nype_tweaks" = "mkdocs_nype.plugins.nype_tweaks.plugin:NypeTweaksPlugin"
"nype/similar_blog_posts" = "mkdocs_nype.plugins.similar_blog_posts.plugin:SimilarBlogPostsPlugin"
"nype/server_redirects" = "mkdocs_nype.plugins.server_redirects.plugin:ServerRedirectsPlugin"
"nype/webp_images" = "mkdocs_nype.plugins.webp_images.plugin:WebpImagesPlugin"

# Redefinition of Material for MkDocs entry points to allow for easier config transition
# is currently not possible as some iternals expect the material/ prefix.
# This issue is fixed in __init__.py

[project.entry-points."mkdocs.themes"]
nype = "mkdocs_nype.templates"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.metadata.hooks.requirements_txt]
filename = "requirements.txt"

[tool.hatch.build.targets.wheel]
include = [
    "/mkdocs_nype"
]

[tool.isort]
profile = "black"
line_length = 100

[tool.black]
line-length = 100